--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img class="logotipo" src="img/Logotipo-Boutique-Mariana-Rios.png" alt="Logotipo com as letras H S">
         <h1> TENIS STORE</h1>
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Produtos</li>
+            <li class="cabecalho-lista-item">Tẽnis</li>
             <li class="cabecalho-lista-item">Contato</li>
         </ul>
     </header>
