--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="logotipo" src="img/Logotipo-Boutique-Mariana-Rios.png" alt="Logotipo com as letras H S">
+        <img class="logotipo" src="img/logotenis.png" alt="Logotipo com as letras H S">
         <h1> TENIS STORE</h1>
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Tênis</li>
