--- a/index.html
+++ b/index.html
@@ -1,25 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
+[09:19, 4/26/2024] André: .
+[09:19, 4/26/2024] Mario: <!DOCTYPE html>
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tenis Store</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Amantes de Tênis</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="cabecalho">
-        <img class="logotipo" src="img/logotenis.png" alt="Logotipo com as letras H S">
-        <h1> TENIS STORE</h1>
-        <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Tênis</li>
-            <li class="cabecalho-lista-item">Contato</li>
-        </ul>
+    <header>
+        <h1>Bem-vindo ao Mundo dos Tênis</h1>
+        <nav>
+            <ul>
+                <li><a href="#historia">História</a></li>
+                <li><a href="#modelos">Modelos Populares</a></li>
+                <li><a href="#dicas">Dicas de Compra</a></li>
+            </ul>
+        </nav>
     </header>
-
-
+    <section id="historia">
+        <h2>História do Tênis</h2>
+        <p>O tênis é um calçado desenhado para proteger e confortar os pés enquanto se pratica esportes...</p>
+    </section>
+    <section id="modelos">
+        <h2>Modelos Populares</h2>
+        <p>Confira alguns dos modelos mais populares de tênis:</p>
+        <ul>
+            <li>Nike Air Max</li>
+            <li>Adidas Ultraboost</li>
+            <li>Asics Gel Kayano</li>
+        </ul>
+    </section>
+    <section id="dicas">
+        <h2>Dicas para Comprar Tênis</h2>
+        <p>Algumas dicas importantes na hora de comprar seu tênis:</p>
+        <ul>
+            <li>Conheça seu tipo de pisada</li>
+            <li>Preste atenção no material</li>
+            <li>Escolha o tênis certo para a atividade certa</li>
+        </ul>
+    </section>
+    <footer>
+        <p>&copy; 2024 Amantes de Tênis</p>
+    </footer>
 </body>
 </html>
-
-
-
