--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-[09:19, 4/26/2024] André: .
-[09:19, 4/26/2024] Mario: <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
