--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sexo Footwear</title>
+    <title>Netbound Footwear</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Bem-vindo ao Mundo dos Tênis</h1>
+        <h1>Bem-vindo ao Netbound Footwear</h1>
         <nav>
             <ul>
                 <li><a href="#historia">História</a></li>
