--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             <li>Nike Air Max</li>
             <li>Adidas Ultraboost</li>
             <li>Asics Gel Kayano</li>
+            <li>Tesla Coil</li>
+            <li>Hocks Bold</li>
         </ul>
     </section>
     <section id="dicas">
