--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h2>Dicas para Comprar Tênis</h2>
         <p>Algumas dicas importantes na hora de comprar seu tênis:</p>
         <ul>
-            <li>Conheça seu tipo de pisada</li>
+            <li>Conheça seu tamanho de tênis</li>
             <li>Preste atenção no material</li>
             <li>Escolha o tênis certo para a atividade certa</li>
         </ul>
