--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt">
+</head>
+<body>
+    <header class="cabecalho">
+        <img class="logotipo" src="img/logotenis.png" alt="Logotipo da marca">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,7 +36,10 @@
             <li>Hocks Bold</li>
         </ul>
     </section>
-    <section id="dicas">
+    <section id="dicas">    </head>
+        <body>
+            <header class="cabecalho">
+                <img class="logotipo" src="imagem/logo.png" alt="Logotipo com 
         <h2>Dicas para Comprar Tênis</h2>
         <p>Algumas dicas importantes na hora de comprar seu tênis:</p>
         <ul>
@@ -42,7 +49,7 @@
         </ul>
     </section>
     <footer>
-        <p>&copy; 2024 Amantes de Tênis</p>
+        <p>&copy; 2024 Netbound Footwear</p>
     </footer>
 </body>
 </html>
