--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen" />
+</head>
+<body>
+</body>
+</html>
 </head>
 <body>
     <header class="cabecalho">
