--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <head>
 <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen" />
 </head>
-<body>
-</body>
+<body style="background-color: blueviolet;"
+</body> 
 </html>
 </head>
 <body>
