--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen" />
 </head>
-<body style="background-color: blueviolet;"
+<body style="background-color: #ecd7ff
 </body> 
 </html>
 </head>
