--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen" />
 </head>
-<body style="background-color: #ecd7ff
-</body> 
-</html>
-</head>
+<body style="background-color: #badffd
 <body>
     <header class="cabecalho">
         <img class="logotipo" src="img/logotenis.png" alt="Logotipo da marca">
